Fix bug with world locations not showing for new stories
We've accidentally made it so that world organisations, rather than
world locations always show for news stories and world locations only
appear for the world news stories subtype.

The correct behaviour is the inverse.

--- a/app/assets/stylesheets/admin/views/_edit-edition.scss
+++ b/app/assets/stylesheets/admin/views/_edit-edition.scss
@@ -24,7 +24,7 @@
 .app-view-edit-edition__locale-field--hidden,
 .app-view-edit-edition__appointment-fields--hidden,
 .app-view-edit-edition__organisation-fields--hidden,
-.app-view-edit-edition__world-location-fields--hidden,
+.app-view-edit-edition__world-organisation-fields--hidden,
 .app-view-edit-edition__speech-location--hidden,
 .app-view-edit-edition__delivered-on-warning--hidden {
   display: none;
